--- a/printer.cfg
+++ b/printer.cfg
@@ -533,6 +533,8 @@ gcode:
 #   Macros
 #####################################################################
 [include klicky-probe.cfg]
+[include macros.cfg]
+[include z_calibration.cfg]
 [include nozzle_scrub.cfg]
 [include nozzle_purge.cfg]
 
@@ -559,12 +561,20 @@ gcode:
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
-    G28
+    {% set BED = params.BED|int %} ; Get bed temp from gcode
+    {% set HOTEND = params.HOTEND|int %} ; Get nozzle temp from gcode
+    {% set CHAMBER = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
+    M190 S{BED}
+    CG28
+    G90
+    SET_GCODE_OFFSET Z=0.0
+    BED_MESH_CLEAR
     clean_nozzle
     G32                            ; home all axes
+    CALIBRATE_Z
     BED_MESH_CALIBRATE
+    M109 S{HOTEND}
     G0 X175 Y175 Z30 F3600
-    G90         
     purge_nozzle
     G1 Z20 F3000                   ; move nozzle away from bed
     M117 Printing...
