--- a/printer.cfg
+++ b/printer.cfg
@@ -562,8 +562,9 @@ gcode:
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
     {% set BED = params.BED|int %} ; Get bed temp from gcode
-    {% set HOTEND = params.HOTEND|int %} ; Get nozzle temp from gcode
+    {% set EXTRUDER = params.EXTRUDER|int %} ; Get nozzle temp from gcode
     {% set CHAMBER = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
+    SET_FAN_SPEED FAN=nevermore SPEED=1
     M190 S{BED}
     CG28
     G90
@@ -573,7 +574,7 @@ gcode:
     G32                            ; home all axes
     CALIBRATE_Z
     BED_MESH_CALIBRATE
-    M109 S{HOTEND}
+    M109 S{EXTRUDER}
     G0 X175 Y175 Z30 F3600
     purge_nozzle
     G1 Z20 F3000                   ; move nozzle away from bed
@@ -642,7 +643,7 @@ gcode:
 
 [gcode_macro HOME]
 gcode:
-  G28
+  CG28
   G1 X175 Y175 F7800
   
 [virtual_sdcard]
