tired of writing commit msgs

--- a/printer.cfg
+++ b/printer.cfg
@@ -535,8 +535,8 @@ gcode:
 [include klicky-probe.cfg]
 [include macros.cfg]
 [include z_calibration.cfg]
-[include nozzle_scrub.cfg]
-[include nozzle_purge.cfg]
+[include clean_nozzle.cfg]
+[include purge_nozzle.cfg]
 
 [gcode_macro G32]
 gcode:
@@ -605,6 +605,7 @@ gcode:
     M84
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
+    M117 Print Finished
 
 [bed_mesh]
 speed: 300
