--- a/purge_nozzle.cfg
+++ b/purge_nozzle.cfg
@@ -30,7 +30,7 @@
 
 # Name of the macro is clean_nozzle.
 
-[gcode_macro clean_nozzle]
+[gcode_macro purge_nozzle]
 
 # If you are putting your purge bucket at the rear left of the bed as per default installation, enable True on your location_bucket_rear 
 # variable. If you want to put your purge bucket elsewhere (perhaps the front), then set it to False. See diagrams and description 
@@ -38,8 +38,8 @@
 variable_location_bucket_rear:      True
 
 # If you want the purging routine in your bucket enabled, set to True (and vice versa).
-variable_enable_purge:              False
-#variable_enable_purge:              True
+#variable_enable_purge:              False
+variable_enable_purge:              True
 
 # These parameters define your filament purging. The retract variable is used to retract right after purging to prevent unnecessary
 # oozing. Some filament are particularly oozy and may continue to ooze out of the nozzle for a second or two after retracting. The
@@ -209,7 +209,7 @@ gcode:
       ## Clear from area.
       M117 Cleaned!
       G1 Z{brush_top + clearance_z} F{prep_spd_z}
-      G1 X{bucket_left_width / 4} F{prep_spd_xy} 
+      G1 X55 F{prep_spd_xy} 
 
       ## Restore the gcode state to how it was before the macro.
       RESTORE_GCODE_STATE NAME=clean_nozzle
