--- a/printer.cfg
+++ b/printer.cfg
@@ -535,7 +535,6 @@ gcode:
 [include klicky-probe.cfg]
 [include macros.cfg]
 [include z_calibration.cfg]
-[include clean_nozzle.cfg]
 [include purge_nozzle.cfg]
 
 [gcode_macro G32]
@@ -570,7 +569,7 @@ gcode:
     G90
     SET_GCODE_OFFSET Z=0.0
     BED_MESH_CLEAR
-    clean_nozzle
+    SWIPENOZZLE
     G32                            ; home all axes
     CALIBRATE_Z
     BED_MESH_CALIBRATE
@@ -578,6 +577,7 @@ gcode:
     G0 X175 Y175 Z30 F3600
     purge_nozzle
     G1 Z20 F3000                   ; move nozzle away from bed
+    SET_FAN_SPEED FAN=nevermore SPEED=1
     M117 Printing...
    
 
