--- a/printer.cfg
+++ b/printer.cfg
@@ -30,20 +30,20 @@ restart_method: command
 ##--------------------------------------------------------------------
 
 [input_shaper]
-shaper_freq_x: 51.2
+shaper_freq_x: 52
 shaper_type_x: mzv
-shaper_freq_y: 70.0
+shaper_freq_y: 65.6
 shaper_type_y: 3hump_ei
 
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 3000             #Max 4000
+max_accel: 3200             #Max 4000
 max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 350
 square_corner_velocity: 5.0
 
-#[include adxl.cfg]
+[include adxl.cfg]
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -573,6 +573,7 @@ gcode:
     BED_MESH_CLEAR
     SWIPENOZZLE
     G32                            ; home all axes
+    SWIPENOZZLE
     BED_MESH_CALIBRATE
     SWIPENOZZLE
     CALIBRATE_Z
@@ -670,11 +671,11 @@ path: ~/gcode
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.133750, 0.115000, 0.098750, 0.085000, 0.132500
-#*# 	  0.067500, 0.052500, 0.042500, 0.036250, 0.061250
-#*# 	  0.028750, 0.008750, 0.000000, -0.007500, 0.007500
-#*# 	  0.073750, 0.052500, 0.036250, 0.026250, 0.040000
-#*# 	  0.143750, 0.118750, 0.115000, 0.116250, 0.136250
+#*# 	0.133750, 0.115000, 0.098750, 0.085000, 0.132500
+#*# 	0.067500, 0.052500, 0.042500, 0.036250, 0.061250
+#*# 	0.028750, 0.008750, 0.000000, -0.007500, 0.007500
+#*# 	0.073750, 0.052500, 0.036250, 0.026250, 0.040000
+#*# 	0.143750, 0.118750, 0.115000, 0.116250, 0.136250
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
