--- a/z_calibration.cfg
+++ b/z_calibration.cfg
@@ -14,6 +14,7 @@ gcode:
     {% set bed_position = params.BED_POSITION|default('None') %}
     CG28
     M117 Z-Calibration..
+    SWIPENOZZLE
     ATTACH_PROBE                # a macro for fetching the probe first
     {% if bed_position != 'None' %}
       BASE_CALIBRATE_Z BED_POSITION={bed_position}
