--- a/printer.cfg
+++ b/printer.cfg
@@ -29,11 +29,13 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0F002A001750535556323420-if00
 restart_method: command
 ##--------------------------------------------------------------------
 
+#[include klipperExpander.cfg]
+
 [input_shaper]
-shaper_freq_x: 52
+shaper_freq_x: 52.0
 shaper_type_x: mzv
-shaper_freq_y: 65.6
-shaper_type_y: 3hump_ei
+shaper_freq_y: 38.6
+shaper_type_y: mzv
 
 [printer]
 kinematics: corexy
@@ -43,7 +45,7 @@ max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 350
 square_corner_velocity: 5.0
 
-[include adxl.cfg]
+#[include adxl.cfg]
 
 #####################################################################
 #   X/Y Stepper Settings
