--- a/printer.cfg
+++ b/printer.cfg
@@ -39,8 +39,8 @@ shaper_type_y: mzv
 
 [printer]
 kinematics: corexy
-max_velocity: 300  
-max_accel: 3200             #Max 4000
+max_velocity: 300
+max_accel: 5000
 max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 350
 square_corner_velocity: 5.0
