--- a/printer.cfg
+++ b/printer.cfg
@@ -29,7 +29,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0F002A001750535556323420-if00
 restart_method: command
 ##--------------------------------------------------------------------
 
-#[include klipperExpander.cfg]
+[include klipperExpander.cfg]
 
 [input_shaper]
 shaper_freq_x: 52.0
@@ -256,7 +256,7 @@ filament_diameter: 1.75
 heater_pin: PA2
 ##  Validate the following thermistor type to make sure it is correct
 ##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-sensor_type: ATC Semitec 104GT-2
+sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: PF4
 min_temp: 10
 max_temp: 270
@@ -294,7 +294,7 @@ heater_pin: PA3
 #heater_pin: PA1
 ##  Validate the following thermistor type to make sure it is correct
 ##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-sensor_type: Generic 3950
+sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: PF3
 ##  Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
 max_power: 0.6
@@ -514,9 +514,9 @@ spi_software_sclk_pin: EXP2_2
 ##  To control Neopixel RGB in mini12864 display
 pin: EXP1_6
 chain_count: 3
-initial_RED: 0.1
-initial_GREEN: 0.5
-initial_BLUE: 0.0
+initial_RED: 0
+initial_GREEN: 1
+initial_BLUE: 0
 color_order: RGB
 
 ##  Set RGB values on boot up for each Neopixel. 
@@ -524,7 +524,7 @@ color_order: RGB
 [delayed_gcode setdisplayneopixel]
 initial_duration: 1
 gcode:
-        SET_LED LED=btt_mini12864 RED=1 GREEN=1 BLUE=1 INDEX=1 TRANSMIT=0
+        SET_LED LED=btt_mini12864 RED=1 GREEN=0 BLUE=1 INDEX=1 TRANSMIT=0
         SET_LED LED=btt_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=2 TRANSMIT=0
         SET_LED LED=btt_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=3 
 
@@ -575,7 +575,6 @@ gcode:
     BED_MESH_CLEAR
     SWIPENOZZLE
     G32                            ; home all axes
-    SWIPENOZZLE
     BED_MESH_CALIBRATE
     SWIPENOZZLE
     CALIBRATE_Z
