--- a/macros.cfg
+++ b/macros.cfg
@@ -82,3 +82,27 @@ gcode:
 [gcode_macro ZDOWN]
 gcode:
     SET_GCODE_OFFSET Z_ADJUST=-0.01 MOVE=1
+[gcode_macro LightsOff]
+gcode:
+    SET_LED LED=NeoPixels VALUE=0
+[gcode_macro LightsOn]
+gcode:
+    SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=1
+[gcode_macro Red]
+gcode:
+    SET_LED LED=NeoPixels RED=1 GREEN=0 BLUE=0
+[gcode_macro Blue]
+gcode:
+    SET_LED LED=NeoPixels RED=0 GREEN=0 BLUE=1
+[gcode_macro Green]
+gcode:
+    SET_LED LED=NeoPixels RED=0 GREEN=1 BLUE=0
+[gcode_macro Purple]
+gcode:
+    SET_LED LED=NeoPixels RED=1 GREEN=0 BLUE=1
+[gcode_macro Yellow]
+gcode:
+    SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=0
+[gcode_macro White]
+gcode:
+    SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=1
