--- a/klipperExpander.cfg
+++ b/klipperExpander.cfg
@@ -42,7 +42,7 @@ initial_GREEN: 1
 initial_BLUE: 1
 
 [temperature_sensor Chamber]
-sensor_type: NTC 100K MGB18-104F39050L32
+sensor_type: Generic 3950
 sensor_pin: expander:PA6
 gcode_id=10
 
