--- a/macros.cfg
+++ b/macros.cfg
@@ -106,3 +106,54 @@ gcode:
 [gcode_macro White]
 gcode:
     SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=1
+
+[delayed_gcode shutdown_machine]
+gcode:
+     {action_call_remote_method("shutdown_machine")}
+initial_duration: 0.0
+
+[menu __main __poweroff]
+type: command
+enable: {printer.idle_timeout.state != "Printing"}
+name: Turn off Pi
+gcode:
+     M117 Shutdown_RPI
+     M118 Shutdown_RPI
+     { menu.exit() }
+     UPDATE_DELAYED_GCODE ID=shutdown_machine DURATION=1
+
+[delayed_gcode reboot_machine]
+gcode:
+     {action_call_remote_method("reboot_machine")}
+initial_duration: 0.0
+
+[menu __main __rebootpi]
+type: command
+enable: {printer.idle_timeout.state != "Printing"}
+name: Reboot Pi
+gcode:
+     M117 Reboot_RPI
+     M118 Reboot_RPI
+     { menu.exit() }
+     UPDATE_DELAYED_GCODE ID=reboot_machine DURATION=1
+
+[menu __main __heatsoak]
+type: command
+enable: {printer.idle_timeout.state != "Printing"}
+name: Heatsoak
+gcode: HEATSOAK
+     M117 Heat Soaking...
+     M118 Heat Soaking...
+     { menu.exit() }
+
+[menu __main __lightson]
+type: command
+name: Lights On
+gcode: LightsOn
+     { menu.exit() }
+
+[menu __main __lightsoff]
+type: command
+name: Lights Off
+gcode: LightsOff
+     { menu.exit() }
