--- a/printer.cfg
+++ b/printer.cfg
@@ -256,7 +256,7 @@ filament_diameter: 1.75
 heater_pin: PA2
 ##  Validate the following thermistor type to make sure it is correct
 ##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-sensor_type: NTC 100K MGB18-104F39050L32
+sensor_type: Generic 3950
 sensor_pin: PF4
 min_temp: 10
 max_temp: 270
@@ -294,7 +294,7 @@ heater_pin: PA3
 #heater_pin: PA1
 ##  Validate the following thermistor type to make sure it is correct
 ##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-sensor_type: NTC 100K MGB18-104F39050L32
+sensor_type: Generic 3950
 sensor_pin: PF3
 ##  Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
 max_power: 0.6
