nevermore as a separate config

--- a/printer.cfg
+++ b/printer.cfg
@@ -370,12 +370,7 @@ max_power: 1.0
 shutdown_speed: 0.0
 kick_start_time: 5.0
 
-[fan_generic nevermore]
-#  Nevermore - FAN3
-pin: PD13
-max_power: 1.0
-shutdown_speed: 0.0
-kick_start_time: 5.0
+[include nevermore.cfg]
 
 #####################################################################
 #   LED Control
@@ -567,7 +562,7 @@ gcode:
     {% set BED = params.BED|int %} ; Get bed temp from gcode
     {% set EXTRUDER = params.EXTRUDER|int %} ; Get nozzle temp from gcode
     {% set CHAMBER = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
-    SET_FAN_SPEED FAN=nevermore SPEED=1
+    SET_FAN_SPEED FAN=Nevermore SPEED=1
     M190 S{BED}
     CG28
     G90
@@ -582,7 +577,7 @@ gcode:
     G0 X175 Y175 Z30 F3600
     clean_nozzle
     G1 Z20 F3000                   ; move nozzle away from bed
-    SET_FAN_SPEED FAN=nevermore SPEED=1
+    SET_FAN_SPEED FAN=Nevermore SPEED=1
     M117 Printing...
    
 
@@ -611,6 +606,8 @@ gcode:
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
     M117 Print Finished
+    Green
+    UPDATE_DELAYED_GCODE ID=filter_off DURATION=180
 
 [bed_mesh]
 speed: 300
@@ -668,22 +665,3 @@ path: ~/gcode
 #*#
 #*# [stepper_z]
 #*# position_endstop = 2.300
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	0.133750, 0.115000, 0.098750, 0.085000, 0.132500
-#*# 	0.067500, 0.052500, 0.042500, 0.036250, 0.061250
-#*# 	0.028750, 0.008750, 0.000000, -0.007500, 0.007500
-#*# 	0.073750, 0.052500, 0.036250, 0.026250, 0.040000
-#*# 	0.143750, 0.118750, 0.115000, 0.116250, 0.136250
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 310.0
-#*# mesh_x_pps = 2
-#*# max_x = 310.0
