--- a/macros.cfg
+++ b/macros.cfg
@@ -9,7 +9,7 @@ gcode:
     Red
 	M104 S245 ; set hotend to 245 (ABS) and don't wait
 	M140 S115 ; set bed to 115 and don't wait
-        SET_FAN_SPEED FAN=Nevermore SPEED=1
+    SET_FAN_SPEED FAN=Nevermore SPEED=1
 	CG28 ; conditional home
 	G90 ; absolute positioning
 	G1 X55 Y350 F6800 ; Move to bucket
@@ -160,3 +160,80 @@ type: command
 name: Lights Off
 gcode: LightsOff
      { menu.exit() }
+
+[gcode_macro G32]
+gcode:
+    SAVE_GCODE_STATE NAME=STATE_G32
+    G90
+    SWIPENOZZLE
+    G28
+    QUAD_GANTRY_LEVEL
+    SWIPENOZZLE
+    G28
+    G0 X175 Y175 Z30 F3600
+    RESTORE_GCODE_STATE NAME=STATE_G32
+
+[gcode_macro PRINT_START]
+#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
+gcode:
+    {% set BED = params.BED|int %} ; Get bed temp from gcode
+    {% set EXTRUDER = params.EXTRUDER|int %} ; Get nozzle temp from gcode
+    {% set CHAMBERTEMP = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
+    HEATSOAK
+    TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={CHAMBERTEMP}
+    M190 S{BED} # wait for bed temperature
+    M109 S{EXTRUDER} # wait for extruder temperature
+    Yellow
+    G90
+    SET_GCODE_OFFSET Z=0.0
+    BED_MESH_CLEAR
+    SWIPENOZZLE
+    G32                            ; home all axes
+    BED_MESH_CALIBRATE
+    SWIPENOZZLE
+    CALIBRATE_Z
+    G0 X175 Y175 Z30 F3600
+    clean_nozzle
+    G1 Z20 F3000                   ; move nozzle away from bed
+    White
+    M117 Printing...
+
+[gcode_macro PRINT_END]
+#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
+gcode:
+    # safe anti-stringing move coords
+    {% set th = printer.toolhead %}
+    {% set x_safe = th.position.x + 20 * (1 if th.axis_maximum.x - th.position.x > 20 else -1) %}
+    {% set y_safe = th.position.y + 20 * (1 if th.axis_maximum.y - th.position.y > 20 else -1) %}
+    {% set z_safe = [th.position.z + 2, th.axis_maximum.z]|min %}
+
+    SAVE_GCODE_STATE NAME=STATE_PRINT_END
+
+    M400                           ; wait for buffer to clear
+    G92 E0                         ; zero the extruder
+    G1 E-5.0 F1800                 ; retract filament
+
+    TURN_OFF_HEATERS
+
+    G90                                      ; absolute positioning
+    G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
+    G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
+    M107                                     ; turn off fan
+    M84
+    BED_MESH_CLEAR
+    RESTORE_GCODE_STATE NAME=STATE_PRINT_END
+    M117 Print Finished
+    Green
+    UPDATE_DELAYED_GCODE ID=filter_off DURATION=360
+
+[gcode_macro CANCEL_PRINT]
+description: Cancel the actual running print
+rename_existing: CANCEL_PRINT_BASE
+gcode:
+  TURN_OFF_HEATERS
+  CANCEL_PRINT_BASE
+
+[gcode_macro HOME]
+gcode:
+  CG28
+  G1 X175 Y175 F7800
