--- a/macros.cfg
+++ b/macros.cfg
@@ -121,15 +121,15 @@ gcode:
      {action_call_remote_method("shutdown_machine")}
 initial_duration: 0.0
 
-[menu __main __poweroff]
-type: command
-enable: {printer.idle_timeout.state != "Printing"}
-name: Turn off Pi
-gcode:
-     M117 Shutdown_RPI
-     M118 Shutdown_RPI
-     { menu.exit() }
-     UPDATE_DELAYED_GCODE ID=shutdown_machine DURATION=1
+#[menu __main __poweroff]
+#type: command
+#enable: {printer.idle_timeout.state != "Printing"}
+#name: Turn off Pi
+#gcode:
+#     M117 Shutdown_RPI
+#     M118 Shutdown_RPI
+#     { menu.exit() }
+#     UPDATE_DELAYED_GCODE ID=shutdown_machine DURATION=1
 
 [delayed_gcode reboot_machine]
 gcode:
@@ -137,34 +137,34 @@ gcode:
      {action_call_remote_method("reboot_machine")}
 initial_duration: 0.0
 
-[menu __main __rebootpi]
-type: command
-enable: {printer.idle_timeout.state != "Printing"}
-name: Reboot Pi
-gcode:
-     M117 Reboot_RPI
-     M118 Reboot_RPI
-     { menu.exit() }
-     UPDATE_DELAYED_GCODE ID=reboot_machine DURATION=1
+#[menu __main __rebootpi]
+#type: command
+#enable: {printer.idle_timeout.state != "Printing"}
+#name: Reboot Pi
+#gcode:
+#     M117 Reboot_RPI
+#     M118 Reboot_RPI
+#     { menu.exit() }
+#     UPDATE_DELAYED_GCODE ID=reboot_machine DURATION=1
 
-[menu __main __heatsoak]
-type: command
-enable: {printer.idle_timeout.state != "Printing"}
-name: Heatsoak
-gcode: HEATSOAK
-     { menu.exit() }
+#[menu __main __heatsoak]
+#type: command
+#enable: {printer.idle_timeout.state != "Printing"}
+#name: Heatsoak
+#gcode: HEATSOAK
+#     { menu.exit() }
 
-[menu __main __lightson]
-type: command
-name: Lights On
-gcode: LightsOn
-     { menu.exit() }
+#[menu __main __lightson]
+#type: command
+#name: Lights On
+#gcode: LightsOn
+#     { menu.exit() }
 
-[menu __main __lightsoff]
-type: command
-name: Lights Off
-gcode: LightsOff
-     { menu.exit() }
+#[menu __main __lightsoff]
+#type: command
+#name: Lights Off
+#gcode: LightsOff
+#     { menu.exit() }
 
 [gcode_macro G32]
 gcode:
@@ -217,7 +217,7 @@ gcode:
 
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
-    G1 E-5.0 F1800                 ; retract filament
+    G1 E-15.0 F1800                 ; retract filament
 
     TURN_OFF_HEATERS
 
@@ -236,6 +236,8 @@ gcode:
 description: Cancel the actual running print
 rename_existing: CANCEL_PRINT_BASE
 gcode:
+    G92 E0
+    G1 E-15.0 F1800
     TURN_OFF_HEATERS
     CANCEL_PRINT_BASE
 
