fixes for display

--- a/printer.cfg
+++ b/printer.cfg
@@ -279,6 +279,9 @@ sensor_type: temperature_host
 [temperature_sensor Octopus]
 sensor_type: temperature_mcu
 
+[display_status]
+#[include display.cfg]
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
