--- a/macros.cfg
+++ b/macros.cfg
@@ -18,7 +18,7 @@ gcode:
 [gcode_macro SWIPENOZZLE]
 gcode:
 	CG28
-        G0 F5000
+    G0 F5000
 	SAVE_GCODE_STATE NAME=SWIPENOZZLE
 	G90
 	G0 X85 Y350 Z15 F5000
@@ -202,7 +202,7 @@ gcode:
     clean_nozzle
     G1 Z20 F3000                   ; move nozzle away from bed
     White
-    M117
+    M117 Printing...
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
