--- a/moonraker.conf
+++ b/moonraker.conf
@@ -43,3 +43,12 @@ enable_auto_refresh: True
 type: web
 repo: fluidd-core/fluidd
 path: ~/fluidd
+
+
+[update_manager led_effect]
+type: git_repo
+path: ~/klipper-led_effect
+origin: https://github.com/julianschill/klipper-led_effect.git
+is_system_service: False
+
+
