--- a/printer.cfg
+++ b/printer.cfg
@@ -3,6 +3,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0F002A001750535556323420-if00
 restart_method: command
 
 [include klipperExpander.cfg]
+[include led_effects.cfg]
 
 [input_shaper]
 shaper_freq_x: 52.0
