--- a/moonraker.conf
+++ b/moonraker.conf
@@ -52,3 +52,11 @@ origin: https://github.com/julianschill/klipper-led_effect.git
 is_system_service: False
 
 
+
+[update_manager moonraker-telegram-bot]
+type: git_repo
+path: ~/moonraker-telegram-bot
+origin: https://github.com/nlef/moonraker-telegram-bot.git
+env: ~/moonraker-telegram-bot-env/bin/python
+requirements: scripts/requirements.txt
+install_script: scripts/install.sh
