weird moonraker updates

--- a/printer.cfg
+++ b/printer.cfg
@@ -270,7 +270,7 @@ algorithm: bicubic
 relative_reference_index: 12
  
 [virtual_sdcard]
-path: ~/gcode
+path: /home/pi/printer_data/gcodes
 
 [pause_resume]
 
