--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,8 +1,10 @@
-
+[printer Voron2]
+titlebar_items: Chamber
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 
 #~#
 #~# [main]
+#~# screen_blanking = 7200
 #~# font_size = small
 #~# confirm_estop = True
 #~# print_sort_dir = name_desc
