prep to redo to CANbus

--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,10 +1,9 @@
 [printer Voron2]
 titlebar_items: Chamber
 #~# --- Do not edit below this line. This section is auto generated --- #~#
-
 #~#
 #~# [main]
-#~# screen_blanking = 7200
+#~# screen_blanking = off
 #~# font_size = small
 #~# confirm_estop = True
 #~# print_sort_dir = name_desc
