--- a/moonraker.conf
+++ b/moonraker.conf
@@ -54,3 +54,5 @@ origin: https://github.com/nlef/moonraker-telegram-bot.git
 env: ~/moonraker-telegram-bot-env/bin/python
 requirements: scripts/requirements.txt
 install_script: scripts/install.sh
+
+[include moonraker-obico-update.cfg]
