--- a/printer.cfg
+++ b/printer.cfg
@@ -5,11 +5,11 @@ restart_method: command
 [include klipperExpander.cfg]
 [include led_effects.cfg]
 
-[input_shaper]
-shaper_freq_x: 52.0
-shaper_type_x: mzv
-shaper_freq_y: 38.6
-shaper_type_y: mzv
+#[input_shaper]
+#shaper_freq_x: 52.0
+#shaper_type_x: mzv
+#shaper_freq_y: 38.6
+#shaper_type_y: mzv
 
 [printer]
 kinematics: corexy
@@ -160,8 +160,8 @@ min_temp: 10
 max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
-pressure_advance: 0.06
-pressure_advance_smooth_time: 0.040
+#pressure_advance: 0.06
+#pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
 uart_pin: PE1
