update to CAN and SB

--- a/printer.cfg
+++ b/printer.cfg
@@ -1,15 +1,11 @@
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0F002A001750535556323420-if00
-restart_method: command
+#serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0F002A001750535556323420-if00
+#restart_method: command
+canbus_uuid: 4341f13a370e
 
+[include sb2040.cfg]
 [include klipperExpander.cfg]
 [include led_effects.cfg]
-
-#[input_shaper]
-#shaper_freq_x: 52.0
-#shaper_type_x: mzv
-#shaper_freq_y: 38.6
-#shaper_type_y: mzv
 
 [printer]
 kinematics: corexy
@@ -20,6 +16,11 @@ max_z_accel: 350
 square_corner_velocity: 5.0
 
 #[include adxl.cfg]
+
+[safe_z_home]
+home_xy_position:175,175
+speed:100
+z_hop:20
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -80,7 +81,7 @@ enable_pin: !PG5
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
-endstop_pin: PG10
+endstop_pin: probe:z_virtual_endstop
 position_max: 330
 position_min: -5
 homing_speed: 8
@@ -144,18 +145,18 @@ stealthchop_threshold: 0
 #####################################################################
 
 [extruder]
-step_pin: PE2
-dir_pin: PE3
-enable_pin: !PD4
+step_pin: sb2040:EXT_STEP
+dir_pin: !sb2040:EXT_DIR
+enable_pin: !sb2040:EXT_EN
 rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
 gear_ratio: 50:17               #BMG Gear Ratio
 microsteps: 32
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
-heater_pin: PA2
-sensor_type: Generic 3950
-sensor_pin: PF4
+heater_pin: sb2040:HE0
+sensor_type: ATC Semitec 104GT-2
+sensor_pin: sb2040:TH0
 min_temp: 10
 max_temp: 270
 max_power: 1.0
@@ -180,16 +181,17 @@ sensor_type: Generic 3950
 sensor_pin: PF3
 max_power: 0.6
 min_temp: 0
-max_temp: 120
+max_temp: 200
+control: pid
 
 #####################################################################
 #   Probe
 #####################################################################
 
 [probe]
-pin: PG15
+pin: ^sb2040:LIMIT_1
 x_offset: 0
-y_offset: 25.0
+y_offset: 0
 z_offset: 0
 speed: 7
 samples: 3
@@ -197,18 +199,34 @@ samples_result: median
 sample_retract_dist: 2.0
 samples_tolerance: 0.01
 samples_tolerance_retries: 3
+activate_gcode:
+    {% set PROBE_TEMP = 150 %}
+    {% set MAX_TEMP = PROBE_TEMP + 5 %}
+    {% set ACTUAL_TEMP = printer.extruder.temperature %}
+    {% set TARGET_TEMP = printer.extruder.target %}
 
+    {% if TARGET_TEMP > PROBE_TEMP %}
+        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+        M109 S{ PROBE_TEMP }
+    {% else %}
+        # Temperature target is already low enough, but nozzle may still be too hot.
+        {% if ACTUAL_TEMP > MAX_TEMP %}
+            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+        {% endif %}
+    {% endif %}
+    
 #####################################################################
 #   Fan Control
 #####################################################################
 
 [fan]
-pin: PA8
-kick_start_time: 0.5
-off_below: 0.10
+pin: sb2040:FAN0
+#kick_start_time: 0.5
+#off_below: 0.10
 
 [heater_fan hotend_fan]
-pin: PE5
+pin: sb2040:FAN1
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
@@ -253,9 +271,9 @@ max_adjust: 10
 #####################################################################
 #   Macros
 #####################################################################
-[include klicky-probe.cfg]
+#[include klicky-probe.cfg]
 [include macros.cfg]
-[include z_calibration.cfg]
+#[include z_calibration.cfg]
 [include purge_nozzle.cfg]
 
 [bed_mesh]
@@ -298,5 +316,3 @@ path: /home/pi/printer_data/gcodes
 #*# pid_ki = 1.608
 #*# pid_kd = 139.048
 #*#
-#*# [stepper_z]
-#*# position_endstop = 2.300
