trying all the things

--- a/klipperExpander.cfg
+++ b/klipperExpander.cfg
@@ -37,9 +37,10 @@ pins: !expander:PA4
 [neopixel NeoPixels]
 pin: expander:PB1
 chain_count: 68
-initial_RED: 1
-initial_GREEN: 1
-initial_BLUE: 1
+color_order: RGB
+initial_RED: 1.0
+initial_GREEN: 1.0
+initial_BLUE: 1.0
 
 [temperature_sensor Chamber]
 sensor_type: Generic 3950
