--- a/macros.cfg
+++ b/macros.cfg
@@ -1,3 +1,8 @@
+[delayed_gcode LightsTurnOn]
+initial_duration: 1
+gcode:
+    SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=1
+
 [gcode_macro CG28]
 gcode:
 	{% if "x" not in printer.toolhead.homed_axes or "y" not in printer.toolhead.homed_axes or "z" not in printer.toolhead.homed_axes %}
@@ -175,10 +180,8 @@ initial_duration: 0.0
 gcode:
     SAVE_GCODE_STATE NAME=STATE_G32
     G90
-    SWIPENOZZLE
     G28
     QUAD_GANTRY_LEVEL
-    SWIPENOZZLE
     G28
     G0 X175 Y175 Z30 F3600
     RESTORE_GCODE_STATE NAME=STATE_G32
@@ -189,22 +192,20 @@ gcode:
     {% set BED = params.BED|int %} ; Get bed temp from gcode
     {% set EXTRUDER = params.EXTRUDER|int %} ; Get nozzle temp from gcode
     {% set CHAMBERTEMP = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
-    HEATSOAK
+    #HEATSOAK
     M190 S{BED} # wait for bed temperature
-    TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={CHAMBERTEMP}
+    #TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={CHAMBERTEMP}
     Yellow
     M117 Initializing...
     G90
-    SET_GCODE_OFFSET Z=0.0
-    BED_MESH_CLEAR
-    SWIPENOZZLE
-    G32                            ; home all axes
+    #SET_GCODE_OFFSET Z=0.0
+    #BED_MESH_CLEAR
+    #G32                            ; home all axes
+    G28
+    QUAD_GANTRY_LEVEL
     BED_MESH_CALIBRATE
-    SWIPENOZZLE
-    CALIBRATE_Z
-    BUCKET
+    #BUCKET
     M109 S{EXTRUDER} # wait for extruder temperature
-    clean_nozzle
     G1 Z20 F3000                   ; move nozzle away from bed
     White
     M117
