--- a/printer.cfg
+++ b/printer.cfg
@@ -1,17 +1,16 @@
 [mcu]
-#serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0F002A001750535556323420-if00
-#restart_method: command
 canbus_uuid: 4341f13a370e
 
 [include sb2040.cfg]
 [include klipperExpander.cfg]
+[include stealthburner_leds.cfg]
 [include led_effects.cfg]
 
 [printer]
 kinematics: corexy
 max_velocity: 300
-max_accel: 5000
-max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
+max_accel: 3000
+max_z_velocity: 15
 max_z_accel: 350
 square_corner_velocity: 5.0
 
@@ -31,13 +30,13 @@ step_pin: PF13
 dir_pin: PF12
 enable_pin: !PF14
 rotation_distance: 40
-microsteps: 32
-full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
+microsteps: 16
+full_steps_per_rotation:200 
 endstop_pin: PG6
 position_min: 0
 position_endstop: 350
 position_max: 350
-homing_speed: 25   #Max 100
+homing_speed: 25
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -53,7 +52,7 @@ step_pin: PG0
 dir_pin: PG1
 enable_pin: !PF15
 rotation_distance: 40
-microsteps: 32
+microsteps: 16
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
 endstop_pin: PG9
 position_min: 0
@@ -80,7 +79,7 @@ dir_pin: PG3
 enable_pin: !PG5
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 32
+microsteps: 16
 endstop_pin: probe:z_virtual_endstop
 position_max: 330
 position_min: -5
@@ -101,7 +100,7 @@ dir_pin: !PC1
 enable_pin: !PA0
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 32
+microsteps: 16
 
 [tmc2209 stepper_z1]
 uart_pin: PC7
@@ -116,7 +115,7 @@ dir_pin: PF10
 enable_pin: !PG2
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 32
+microsteps: 16
 
 [tmc2209 stepper_z2]
 uart_pin: PF2
@@ -131,7 +130,7 @@ dir_pin: !PF0
 enable_pin: !PF1
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 32
+microsteps: 16
 
 [tmc2209 stepper_z3]
 uart_pin: PE4
@@ -146,12 +145,12 @@ stealthchop_threshold: 0
 
 [extruder]
 step_pin: sb2040:EXT_STEP
-dir_pin: !sb2040:EXT_DIR
+dir_pin: sb2040:EXT_DIR
 enable_pin: !sb2040:EXT_EN
-rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
-gear_ratio: 50:17               #BMG Gear Ratio
-microsteps: 32
-full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
+rotation_distance: 22.6
+gear_ratio: 50:10
+microsteps: 16
+full_steps_per_rotation: 200
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: sb2040:HE0
@@ -165,9 +164,9 @@ min_extrude_temp: 170
 #pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
-uart_pin: PE1
+uart_pin: sb2040:EXT_UART
 interpolate: false
-run_current: 0.5
+run_current: 0.4
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -192,7 +191,6 @@ control: pid
 pin: ^sb2040:LIMIT_1
 x_offset: 0
 y_offset: 0
-z_offset: 0
 speed: 7
 samples: 3
 samples_result: median
@@ -305,7 +303,6 @@ path: /home/pi/printer_data/gcodes
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [heater_bed]
-#*# control = pid
 #*# pid_kp = 39.428
 #*# pid_ki = 1.355
 #*# pid_kd = 286.838
@@ -316,3 +313,5 @@ path: /home/pi/printer_data/gcodes
 #*# pid_ki = 1.608
 #*# pid_kd = 139.048
 #*#
+#*# [probe]
+#*# z_offset = -0.375
