add adaptive mesh, purge, and led effects

--- a/printer.cfg
+++ b/printer.cfg
@@ -3,8 +3,11 @@ canbus_uuid: 4341f13a370e
 
 [include sb2040.cfg]
 [include klipperExpander.cfg]
-[include stealthburner_leds.cfg]
+#[include stealthburner_leds.cfg]
+[include stealthburner_led_effects_3_leds.cfg]
 [include led_effects.cfg]
+[include kamp/Adaptive_Mesh.cfg]
+[include kamp/Voron_Purge.cfg]
 
 [printer]
 kinematics: corexy
@@ -14,7 +17,7 @@ max_z_velocity: 15
 max_z_accel: 350
 square_corner_velocity: 5.0
 
-#[include adxl.cfg]
+[exclude_object]
 
 [safe_z_home]
 home_xy_position:175,175
@@ -181,7 +184,7 @@ sensor_pin: PF3
 max_power: 0.6
 min_temp: 0
 max_temp: 200
-control: pid
+#control: pid
 
 #####################################################################
 #   Probe
@@ -290,11 +293,11 @@ path: /home/pi/printer_data/gcodes
 
 [pause_resume]
 
-#[temperature_sensor raspberry_pi]
-#sensor_type: temperature_host
+[temperature_sensor raspberry_pi]
+sensor_type: temperature_host
  
-#[temperature_sensor Octopus]
-#sensor_type: temperature_mcu
+[temperature_sensor Octopus]
+sensor_type: temperature_mcu
 
 [display_status]
 #[include display.cfg]
@@ -303,15 +306,16 @@ path: /home/pi/printer_data/gcodes
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [heater_bed]
-#*# pid_kp = 39.428
-#*# pid_ki = 1.355
-#*# pid_kd = 286.838
+#*# pid_kp = 39.413
+#*# pid_ki = 1.555
+#*# pid_kd = 249.782
+#*# control = pid
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 29.903
-#*# pid_ki = 1.608
-#*# pid_kd = 139.048
+#*# pid_kp = 28.015
+#*# pid_ki = 2.707
+#*# pid_kd = 72.489
 #*#
 #*# [probe]
 #*# z_offset = -0.375
