--- a/klipperExpander.cfg
+++ b/klipperExpander.cfg
@@ -37,7 +37,7 @@ pins: !expander:PA4
 [neopixel NeoPixels]
 pin: expander:PB1
 chain_count: 68
-color_order: RGB
+color_order: GRB
 initial_RED: 1.0
 initial_GREEN: 1.0
 initial_BLUE: 1.0
