--- a/macros.cfg
+++ b/macros.cfg
@@ -192,6 +192,8 @@ gcode:
     {% set BED = params.BED|int %} ; Get bed temp from gcode
     {% set EXTRUDER = params.EXTRUDER|int %} ; Get nozzle temp from gcode
     {% set CHAMBERTEMP = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
+    Red
+    status_heating
     #HEATSOAK
     M190 S{BED} # wait for bed temperature
     #TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={CHAMBERTEMP}
@@ -201,13 +203,19 @@ gcode:
     #SET_GCODE_OFFSET Z=0.0
     #BED_MESH_CLEAR
     #G32                            ; home all axes
+    status_homing
     G28
     QUAD_GANTRY_LEVEL
+    status_meshing
     BED_MESH_CALIBRATE
-    #BUCKET
+    BUCKET
+    Red
+    status_heating
     M109 S{EXTRUDER} # wait for extruder temperature
     G1 Z20 F3000                   ; move nozzle away from bed
+    VORON_PURGE
     White
+    status_printing
     M117
 
 [gcode_macro PRINT_END]
@@ -235,6 +243,7 @@ gcode:
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
     Green
+    status_part_ready
     M117
     UPDATE_DELAYED_GCODE ID=filter_off DURATION=360
 
