--- a/printer.cfg
+++ b/printer.cfg
@@ -12,7 +12,7 @@ canbus_uuid: 4341f13a370e
 [printer]
 kinematics: corexy
 max_velocity: 300
-max_accel: 3000
+max_accel: 5000
 max_z_velocity: 15
 max_z_accel: 350
 square_corner_velocity: 5.0
@@ -163,6 +163,7 @@ min_temp: 10
 max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
+max_extrude_cross_section: 5
 #pressure_advance: 0.06
 #pressure_advance_smooth_time: 0.040
 
@@ -184,7 +185,6 @@ sensor_pin: PF3
 max_power: 0.6
 min_temp: 0
 max_temp: 200
-#control: pid
 
 #####################################################################
 #   Probe
@@ -194,6 +194,7 @@ max_temp: 200
 pin: ^sb2040:LIMIT_1
 x_offset: 0
 y_offset: 0
+#z_offset: 0
 speed: 7
 samples: 3
 samples_result: median
@@ -293,11 +294,11 @@ path: /home/pi/printer_data/gcodes
 
 [pause_resume]
 
-[temperature_sensor raspberry_pi]
-sensor_type: temperature_host
+#[temperature_sensor raspberry_pi]
+#sensor_type: temperature_host
  
-[temperature_sensor Octopus]
-sensor_type: temperature_mcu
+#[temperature_sensor Octopus]
+#sensor_type: temperature_mcu
 
 [display_status]
 #[include display.cfg]
@@ -318,4 +319,10 @@ sensor_type: temperature_mcu
 #*# pid_kd = 72.489
 #*#
 #*# [probe]
-#*# z_offset = -0.375
+#*# z_offset = -0.650
+#*#
+#*# [input_shaper]
+#*# shaper_type_x = 2hump_ei
+#*# shaper_freq_x = 76.4
+#*# shaper_type_y = ei
+#*# shaper_freq_y = 43.6
