--- a/macros.cfg
+++ b/macros.cfg
@@ -190,13 +190,13 @@ gcode:
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
     {% set BED = params.BED|int %} ; Get bed temp from gcode
-    {% set EXTRUDER = params.EXTRUDER|int %} ; Get nozzle temp from gcode
+    {% set HOTEND = params.HOTEND|int %} ; Get nozzle temp from gcode
     {% set CHAMBERTEMP = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
     Red
     status_heating
-    #HEATSOAK
+    HEATSOAK
     M190 S{BED} # wait for bed temperature
-    #TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={CHAMBERTEMP}
+    TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={CHAMBERTEMP}
     Yellow
     M117 Initializing...
     G90
@@ -211,7 +211,7 @@ gcode:
     BUCKET
     Red
     status_heating
-    M109 S{EXTRUDER} # wait for extruder temperature
+    M109 S{HOTEND} # wait for hotend temperature
     G1 Z20 F3000                   ; move nozzle away from bed
     VORON_PURGE
     White
