--- a/printer.cfg
+++ b/printer.cfg
@@ -56,7 +56,7 @@ dir_pin: PG1
 enable_pin: !PF15
 rotation_distance: 40
 microsteps: 16
-full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
+full_steps_per_rotation:200
 endstop_pin: PG9
 position_min: 0
 position_endstop: 350
@@ -153,6 +153,7 @@ enable_pin: !sb2040:EXT_EN
 rotation_distance: 22.6
 gear_ratio: 50:10
 microsteps: 16
+max_extrude_only_distance: 101
 full_steps_per_rotation: 200
 nozzle_diameter: 0.400
 filament_diameter: 1.75
@@ -164,8 +165,6 @@ max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
 max_extrude_cross_section: 5
-#pressure_advance: 0.06
-#pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
 uart_pin: sb2040:EXT_UART
@@ -321,8 +320,3 @@ path: /home/pi/printer_data/gcodes
 #*# [probe]
 #*# z_offset = -0.650
 #*#
-#*# [input_shaper]
-#*# shaper_type_x = 2hump_ei
-#*# shaper_freq_x = 76.4
-#*# shaper_type_y = ei
-#*# shaper_freq_y = 43.6
