--- a/moonraker.conf
+++ b/moonraker.conf
@@ -47,3 +47,5 @@ type: git_repo
 path: ~/klipper-led_effect
 origin: https://github.com/julianschill/klipper-led_effect.git
 is_system_service: False
+
+[include moonraker-obico-update.cfg]
