fixed thermistor type

--- a/printer.cfg
+++ b/printer.cfg
@@ -158,7 +158,7 @@ full_steps_per_rotation: 200
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: sb2040:HE0
-sensor_type: ATC Semitec 104GT-2
+sensor_type: Semitec 104NT-4-R025H42G
 sensor_pin: sb2040:TH0
 min_temp: 10
 max_temp: 270
