--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -2,6 +2,7 @@
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
 #~# [main]
+#~# font_size = small
 #~# show_heater_power = True
 #~# print_sort_dir = date_asc
 #~# 
@@ -9,7 +10,4 @@
 #~# setup_voron_purge = False
 #~# setup_kamp_meshing = False
 #~# m600 = False
-#~# 
-#~# [graph Printer]
-#~# extruder = False
 #~#
