--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,46 +1,46 @@
 [server]
 host: 0.0.0.0
 port: 7125
-
-[file_manager]
-enable_object_processing: True
-
-[data_store]
-gcode_store_size: 1000
-temperature_store_size: 600
+klippy_uds_address: /home/pi/printer_data/comms/klippy.sock
 
 [authorization]
-force_logins: True
-cors_domains:
-  *.local
-  *.lan
-  *://app.fluidd.xyz
-  *.rsletten.com
-
 trusted_clients:
-  10.0.0.0/8
-  127.0.0.0/8
-  169.254.0.0/16
-  172.16.0.0/12
-  192.168.0.0/16
-  FE80::/10
-  ::1/128
+    10.0.0.0/8
+    127.0.0.0/8
+    169.254.0.0/16
+    172.16.0.0/12
+    192.168.0.0/16
+    FE80::/10
+    ::1/128
+cors_domains:
+    *.lan
+    *.local
+    *://localhost
+    *://localhost:*
+    *://my.mainsail.xyz
+    *://app.fluidd.xyz
 
-# enables partial support of Octoprint API
 [octoprint_compat]
 
-# enables moonraker to track and store print history.
 [history]
 
-# this enables moonraker's update manager
 [update_manager]
-enable_auto_refresh: True
+channel: dev
+refresh_interval: 168
 
-# this enabled fluidd updates
-[update_manager client fluidd]
+[update_manager fluidd-config]
+type: git_repo
+primary_branch: master
+path: ~/fluidd-config
+origin: https://github.com/fluidd-core/fluidd-config.git
+managed_services: klipper
+
+[update_manager fluidd]
 type: web
+channel: stable
 repo: fluidd-core/fluidd
 path: ~/fluidd
+
 
 [update_manager led_effect]
 type: git_repo
@@ -48,4 +48,4 @@ path: ~/klipper-led_effect
 origin: https://github.com/julianschill/klipper-led_effect.git
 is_system_service: False
 
-[include moonraker-obico-update.cfg]
+
