--- a/printer.cfg
+++ b/printer.cfg
@@ -3,6 +3,7 @@ canbus_uuid: 4341f13a370e
 
 [include sb2040.cfg]
 [include klipperExpander.cfg]
+[include skirt_button_pcb.cfg]
 #[include stealthburner_leds.cfg]
 [include stealthburner_led_effects_3_leds.cfg]
 [include led_effects.cfg]
@@ -169,7 +170,7 @@ max_extrude_cross_section: 5
 [tmc2209 extruder]
 uart_pin: sb2040:EXT_UART
 interpolate: false
-run_current: 0.6
+run_current: 0.45
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -318,4 +319,4 @@ path: /home/pi/printer_data/gcodes
 #*# pid_kd = 73.380
 #*#
 #*# [probe]
-#*# z_offset = -0.325
+#*# z_offset = -0.38
