--- a/printer.cfg
+++ b/printer.cfg
@@ -1,14 +1,9 @@
+#####################################################################
+#   Main
+#####################################################################
+
 [mcu]
 canbus_uuid: 4341f13a370e
-
-[include sb2040.cfg]
-[include klipperExpander.cfg]
-[include skirt_button_pcb.cfg]
-#[include stealthburner_leds.cfg]
-[include stealthburner_led_effects_3_leds.cfg]
-[include led_effects.cfg]
-[include kamp/Adaptive_Mesh.cfg]
-[include kamp/Voron_Purge.cfg]
 
 [printer]
 kinematics: corexy
@@ -18,12 +13,34 @@ max_z_velocity: 15
 max_z_accel: 350
 square_corner_velocity: 5.0
 
+[idle_timeout]
+timeout: 1800
+
 [exclude_object]
 
-[safe_z_home]
-home_xy_position:175,175
-speed:100
-z_hop:20
+[pause_resume]
+
+[virtual_sdcard]
+path: /home/pi/printer_data/gcodes
+
+[display_status]
+#[include display.cfg]
+
+#####################################################################
+#   Includes
+#####################################################################
+
+[include sb2040.cfg]
+[include klipperExpander.cfg]
+[include skirt_button_pcb.cfg]
+#[include stealthburner_leds.cfg]
+[include stealthburner_led_effects_3_leds.cfg]
+[include led_effects.cfg]
+[include kamp/Adaptive_Mesh.cfg]
+[include kamp/Voron_Purge.cfg]
+[include macros.cfg]
+[include purge_nozzle.cfg]
+[include nevermore.cfg]
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -224,8 +241,8 @@ activate_gcode:
 
 [fan]
 pin: sb2040:FAN0
-#kick_start_time: 0.5
-#off_below: 0.10
+kick_start_time: 0.5
+off_below: 0.10
 
 [heater_fan hotend_fan]
 pin: sb2040:FAN1
@@ -246,14 +263,14 @@ max_power: 1.0
 shutdown_speed: 0.0
 kick_start_time: 5.0
 
-[include nevermore.cfg]
-
 #####################################################################
 #   Homing and Gantry Adjustment Routines
 #####################################################################
 
-[idle_timeout]
-timeout: 1800
+[safe_z_home]
+home_xy_position:175,175
+speed:100
+z_hop:20
 
 [quad_gantry_level]
 gantry_corners:
@@ -270,14 +287,6 @@ retries: 5
 retry_tolerance: 0.0075
 max_adjust: 10
 
-#####################################################################
-#   Macros
-#####################################################################
-#[include klicky-probe.cfg]
-[include macros.cfg]
-#[include z_calibration.cfg]
-[include purge_nozzle.cfg]
-
 [bed_mesh]
 speed: 300
 horizontal_move_z: 10
@@ -289,10 +298,9 @@ probe_count: 5,5
 algorithm: bicubic
 relative_reference_index: 12
  
-[virtual_sdcard]
-path: /home/pi/printer_data/gcodes
-
-[pause_resume]
+#####################################################################
+#   Temperature Sensors
+#####################################################################
 
 #[temperature_sensor raspberry_pi]
 #sensor_type: temperature_host
@@ -300,8 +308,9 @@ path: /home/pi/printer_data/gcodes
 #[temperature_sensor Octopus]
 #sensor_type: temperature_mcu
 
-[display_status]
-#[include display.cfg]
+#####################################################################
+#   End
+#####################################################################
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
