--- a/macros.cfg
+++ b/macros.cfg
@@ -200,18 +200,16 @@ gcode:
     Yellow
     M117 Initializing...
     G90
-    #SET_GCODE_OFFSET Z=0.0
-    #BED_MESH_CLEAR
-    #G32                            ; home all axes
+    BED_MESH_CLEAR
     status_homing
-    G28
-    QUAD_GANTRY_LEVEL
+    G32                            ; home all axes
     status_meshing
     BED_MESH_CALIBRATE
     BUCKET
     Red
     status_heating
     M109 S{HOTEND} # wait for hotend temperature
+    CLEAN_NOZZLE
     G1 Z20 F3000                   ; move nozzle away from bed
     VORON_PURGE
     White
@@ -259,7 +257,8 @@ gcode:
 [gcode_macro HOME]
 gcode:
     CG28
-    G1 X175 Y175 F7800
+    G90
+    G1 X175 Y175 Z50 F7800
 
 [gcode_macro M600]
 gcode:
