--- a/printer.cfg
+++ b/printer.cfg
@@ -36,8 +36,8 @@ path: /home/pi/printer_data/gcodes
 #[include stealthburner_leds.cfg]
 [include stealthburner_led_effects_3_leds.cfg]
 [include led_effects.cfg]
-[include kamp/Adaptive_Mesh.cfg]
-[include kamp/Voron_Purge.cfg]
+[include Adaptive_Mesh.cfg]
+[include Voron_Purge.cfg]
 [include macros.cfg]
 [include purge_nozzle.cfg]
 [include nevermore.cfg]
