--- a/macros.cfg
+++ b/macros.cfg
@@ -211,7 +211,8 @@ gcode:
     M109 S{HOTEND} # wait for hotend temperature
     CLEAN_NOZZLE
     G1 Z20 F3000                   ; move nozzle away from bed
-    VORON_PURGE
+    #VORON_PURGE
+    PRIME_LINE
     White
     status_printing
     M117
@@ -275,3 +276,26 @@ gcode:
     G91
     G1 E-50 F1000
     RESTORE_GCODE_STATE NAME=M600_state
+
+[gcode_macro PRIME_LINE]
+gcode:
+    # Move Z up a little to prevent scratching the surface
+    G1 Z1.0 F3000
+
+    # Move to prime line position
+    G1 X1 Y40 F5000.0
+
+    # Move Z down to begin prime line
+    G1 z0.2 F5000.0
+
+    # Reset Extruder
+    M83
+    G92 E0
+
+    # Draw prime lines
+    G1 X1 Y200.0 Z0.3 F1500.0 E15
+    G1 X1.3 Y200.0 Z0.3 F5000.0
+    G1 X1.3 Y40 Z0.3 F1500.0 E30
+
+    # Reset Extruder
+    G92 E0
