--- a/moonraker.conf
+++ b/moonraker.conf
@@ -44,6 +44,11 @@ channel: stable
 repo: fluidd-core/fluidd
 path: ~/fluidd
 
+[update_manager canboot]
+type: git_repo
+origin: https://github.com/Arksine/CanBoot.git
+path: ~/CanBoot
+is_system_service: False
 
 [update_manager led_effect]
 type: git_repo
