--- a/printer.cfg
+++ b/printer.cfg
@@ -18,6 +18,9 @@ timeout: 1800
 
 [exclude_object]
 
+[gcode_arcs]
+resolution: 0.1
+
 [pause_resume]
 
 [virtual_sdcard]
@@ -183,6 +186,8 @@ max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
 max_extrude_cross_section: 5
+pressure_advance: 0.056
+pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
 uart_pin: sb2040:EXT_UART
