--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -2,6 +2,7 @@
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
 #~# [main]
+#~# screen_blanking = 7200
 #~# font_size = small
 #~# show_heater_power = True
 #~# print_sort_dir = date_asc
