--- a/macros.cfg
+++ b/macros.cfg
@@ -14,7 +14,7 @@ gcode:
     Red
     M117 Heat Soaking...
 	M104 S150 ; set hotend to 150 and don't wait
-	M140 S115 ; set bed to 115 and don't wait
+	M140 S{ params.HEATSOAK_TEMP } ; heat bed and don't wait
     SET_FAN_SPEED FAN=Nevermore SPEED=1
 	CG28 ; conditional home
 	G90 ; absolute positioning
@@ -194,7 +194,7 @@ gcode:
     {% set CHAMBERTEMP = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
     Red
     status_heating
-    HEATSOAK
+    HEATSOAK heatsoak_temp={BED}
     M190 S{BED} # wait for bed temperature
     TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={CHAMBERTEMP}
     Yellow
@@ -299,3 +299,11 @@ gcode:
 
     # Reset Extruder
     G92 E0
+
+[gcode_macro QUAD_GANTRY_LEVEL]
+rename_existing: _QUAD_GANTRY_LEVEL
+description: Conform a moving, twistable gantry to the shape of a stationary bed
+gcode:
+    CG28
+    _QUAD_GANTRY_LEVEL
+    HOME
