--- a/moonraker-obico.cfg
+++ b/moonraker-obico.cfg
@@ -1,6 +1,6 @@
 [server]
 url = https://app.obico.io
-auth_token = 683a1c8c24688f8bd09d
+auth_token = 923ca71659b492e74c0e
 
 [moonraker]
 host = 127.0.0.1
@@ -14,3 +14,6 @@ path = /home/pi/printer_data/logs/moonraker-obico.log
 
 [tunnel]
 
+
+[misc]
+sentry_opt: in
