--- a/printer.cfg
+++ b/printer.cfg
@@ -186,8 +186,8 @@ max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
 max_extrude_cross_section: 5
-pressure_advance: 0.056
-pressure_advance_smooth_time: 0.040
+pressure_advance: 0.032
+pressure_advance_smooth_time: 0.032
 
 [tmc2209 extruder]
 uart_pin: sb2040:EXT_UART
@@ -301,8 +301,9 @@ fade_start: 0.6
 fade_end: 10.0
 probe_count: 5,5
 algorithm: bicubic
-relative_reference_index: 12
- 
+#relative_reference_index: 12
+zero_reference_position: 175, 175
+
 #####################################################################
 #   Temperature Sensors
 #####################################################################
@@ -333,4 +334,23 @@ relative_reference_index: 12
 #*# pid_kd = 73.380
 #*#
 #*# [probe]
-#*# z_offset = -0.38
+#*# z_offset = -0.450
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.015000, 0.015000, 0.005000, -0.002500, 0.035000
+#*# 	  0.015000, 0.010000, -0.000000, -0.000000, 0.027500
+#*# 	  0.015000, 0.010000, 0.000000, -0.005000, 0.017500
+#*# 	  0.045000, 0.040000, 0.030000, 0.025000, 0.037500
+#*# 	  0.062500, 0.045000, 0.032500, 0.037500, 0.030000
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# max_x = 310.0
+#*# min_y = 40.0
+#*# max_y = 310.0
