--- a/macros.cfg
+++ b/macros.cfg
@@ -13,9 +13,9 @@ gcode:
 gcode:
     Red
     M117 Heat Soaking...
-	M104 S150 ; set hotend to 150 and don't wait
-	M140 S{ params.HEATSOAK_TEMP } ; heat bed and don't wait
     SET_FAN_SPEED FAN=Nevermore SPEED=1
+	M104 S150 ; set hotend to 150 and don't wait
+	M140 S{ params.HEATSOAK_TEMP|default(110)|int } ; heat bed and don't wait
 	CG28 ; conditional home
 	G90 ; absolute positioning
 	G1 X55 Y350 F6800 ; Move to bucket
@@ -52,7 +52,7 @@ gcode:
 	G90
 	G0 X55 Y350 Z25 F5000
 
-[gcode_macro FILAMENT_UNLOAD]
+[gcode_macro UNLOAD_FILAMENT]
 gcode:
 	M83                    # set extruder to relative extrusion
 	G90                    # set toolhead to absolute position
@@ -63,7 +63,7 @@ gcode:
 	G1 E-80 F1800          # ensure filament is clear of extruder gears
 	M82                    # set extruder to absolute extrusion
 
-[gcode_macro FILAMENT_LOAD]
+[gcode_macro LOAD_FILAMENT]
 gcode:
     M83                    # set extruder to relative extrusion
     G90                    # set toolhead to absolute position
@@ -211,8 +211,8 @@ gcode:
     M109 S{HOTEND} # wait for hotend temperature
     CLEAN_NOZZLE
     G1 Z20 F3000                   ; move nozzle away from bed
-    #VORON_PURGE
-    PRIME_LINE
+    VORON_PURGE
+    #PRIME_LINE
     White
     status_printing
     M117
