--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -11,4 +11,21 @@
 #~# setup_voron_purge = False
 #~# setup_kamp_meshing = False
 #~# m600 = False
+#~# status_busy = False
+#~# set_nozzle_leds_on = False
+#~# status_calibrating_z = False
+#~# status_cleaning = False
+#~# status_cooling = False
+#~# status_homing = False
+#~# status_meshing = False
+#~# status_printing = False
+#~# status_heating = False
+#~# status_leveling = False
+#~# status_error_skirt = False
+#~# status_off = False
+#~# status_part_ready = False
+#~# status_ready = False
+#~# status_printing_skirt = False
+#~# status_standby_skirt = False
+#~# voron_purge = False
 #~#
