--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,4 @@
+[include moonraker_obico_macros.cfg]
 #####################################################################
 #   Main
 #####################################################################
