--- a/macros.cfg
+++ b/macros.cfg
@@ -211,9 +211,9 @@ gcode:
     M109 S{HOTEND} # wait for hotend temperature
     CLEAN_NOZZLE
     G1 Z20 F3000                   ; move nozzle away from bed
-    VORON_PURGE
-    #PRIME_LINE
     White
+    #LINE_PURGE
+    VORON_PURGE
     status_printing
     M117
 
