--- a/moonraker.conf
+++ b/moonraker.conf
@@ -50,13 +50,25 @@ origin: https://github.com/Arksine/CanBoot.git
 path: ~/CanBoot
 is_system_service: False
 
+[update_manager katapult]
+type: git_repo
+origin: https://github.com/Arksine/katapult.git
+path: ~/katapult
+is_system_service: False
+
 [update_manager led_effect]
 type: git_repo
 path: ~/klipper-led_effect
 origin: https://github.com/julianschill/klipper-led_effect.git
 is_system_service: False
 
-
+[update_manager Klipper-Adaptive-Meshing-Purging]
+type: git_repo
+channel: dev
+path: ~/Klipper-Adaptive-Meshing-Purging
+origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
+managed_services: klipper
+primary_branch: main
 
 # Crowsnest update_manager entry
 [update_manager crowsnest]
