--- a/printer.cfg
+++ b/printer.cfg
@@ -30,6 +30,8 @@ path: /home/pi/printer_data/gcodes
 [display_status]
 #[include display.cfg]
 
+[firmware_retraction]
+
 #####################################################################
 #   Includes
 #####################################################################
@@ -40,8 +42,9 @@ path: /home/pi/printer_data/gcodes
 #[include stealthburner_leds.cfg]
 [include stealthburner_led_effects_3_leds.cfg]
 [include led_effects.cfg]
-[include Adaptive_Mesh.cfg]
-[include Voron_Purge.cfg]
+#[include Adaptive_Mesh.cfg]
+#[include Voron_Purge.cfg]
+[include KAMP_Settings.cfg]
 [include macros.cfg]
 [include purge_nozzle.cfg]
 [include nevermore.cfg]
