--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,3 +1,22 @@
+[printer Voron]
+titlebar_items: Chamber
+
+[preheat PLA]
+extruder: 200
+heater_bed: 65
+
+[preheat PLA+]
+extruder: 220
+heater_bed: 65
+
+[preheat PETG]
+extruder: 240
+heater_bed: 80
+
+[preheat ABS]
+extruder: 265
+heater_bed: 110 
+gcode: HEATSOAK
 
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
