--- a/macros.cfg
+++ b/macros.cfg
@@ -212,8 +212,8 @@ gcode:
     CLEAN_NOZZLE
     G1 Z20 F3000                   ; move nozzle away from bed
     White
-    #LINE_PURGE
-    VORON_PURGE
+    LINE_PURGE
+    #VORON_PURGE
     status_printing
     M117
 
