--- a/sb2040.cfg
+++ b/sb2040.cfg
@@ -19,7 +19,7 @@ aliases_rgb:
 aliases_adxl:
     ADXL=gpio1
 
-[temperature_sensor toolhead]
+[temperature_sensor _toolhead]
 sensor_type: temperature_mcu
 sensor_mcu: sb2040
 min_temp: 0
