--- a/printer.cfg
+++ b/printer.cfg
@@ -190,8 +190,6 @@ max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
 max_extrude_cross_section: 5
-pressure_advance: 0.032
-pressure_advance_smooth_time: 0.032
 
 [tmc2209 extruder]
 uart_pin: sb2040:EXT_UART
@@ -312,11 +310,11 @@ zero_reference_position: 175, 175
 #   Temperature Sensors
 #####################################################################
 
-#[temperature_sensor raspberry_pi]
-#sensor_type: temperature_host
+[temperature_sensor _raspberry_pi]
+sensor_type: temperature_host
  
-#[temperature_sensor Octopus]
-#sensor_type: temperature_mcu
+[temperature_sensor _Octopus]
+sensor_type: temperature_mcu
 
 #####################################################################
 #   End
