--- a/macros.cfg
+++ b/macros.cfg
@@ -214,7 +214,7 @@ gcode:
     White
     LINE_PURGE
     #VORON_PURGE
-    SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1
+    SFS_ENABLE
     status_printing
     M117
 
@@ -227,7 +227,7 @@ gcode:
     {% set y_safe = th.position.y + 20 * (1 if th.axis_maximum.y - th.position.y > 20 else -1) %}
     {% set z_safe = [th.position.z + 2, th.axis_maximum.z]|min %}
 
-    SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=0
+    SFS_DISABLE
     SAVE_GCODE_STATE NAME=STATE_PRINT_END
 
     M400                           ; wait for buffer to clear
@@ -307,7 +307,7 @@ gcode:
     {% set e = params.E|default(2.5)|int %}                                          ; hotend prime amount (in mm)
 
     {% if printer['pause_resume'].is_paused|int == 1 %}
-        SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1                          ; enable filament sensor
+        SFS_ENABLE
         #INITIAL_RGB                                                                    ; reset LCD color
         SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}  ; set timeout back to configured value
         {% if etemp > 0 %}
@@ -337,7 +337,7 @@ gcode:
         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=zhop VALUE={z}                              ; set z hop variable for reference in resume macro
         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=etemp VALUE={printer['extruder'].target}    ; set hotend temp variable for reference in resume macro
 
-        SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=0                                  ; disable filament sensor
+        SFS_DISABLE
         SAVE_GCODE_STATE NAME=PAUSE                                                          ; save current print position for resume
         BASE_PAUSE                                                                           ; pause print
         {% if (printer.gcode_move.position.z + z) < printer.toolhead.axis_maximum.z %}       ; check that zhop doesn't exceed z max
