--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,4 @@
+[include mainsail.cfg]
 [include moonraker_obico_macros.cfg]
 #####################################################################
 #   Main
@@ -48,6 +49,7 @@ path: /home/pi/printer_data/gcodes
 [include macros.cfg]
 [include purge_nozzle.cfg]
 [include nevermore.cfg]
+[include filament_sensor.cfg]
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -315,28 +317,6 @@ sensor_type: temperature_host
  
 [temperature_sensor _Octopus]
 sensor_type: temperature_mcu
-
-#####################################################################
-#   Filament Sensor
-#####################################################################
-
-[filament_motion_sensor filament_sensor]
-detection_length: 10
-extruder: extruder
-switch_pin: ^PG11
-pause_on_runout: True
-insert_gcode:
-    M117 Insert Detected
-runout_gcode:
-    M117 Runout Detected
-    RED
-    #LCDRGB R=1 G=0 B=0  # Turn LCD red
-    #BEEP I=12
-
-[delayed_gcode DISABLEFILAMENTSENSOR]
-initial_duration: 1
-gcode:
-    SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=0
 
 #####################################################################
 #   End
