--- a/macros.cfg
+++ b/macros.cfg
@@ -191,7 +191,7 @@ gcode:
 gcode:
     {% set BED = params.BED|int %} ; Get bed temp from gcode
     {% set HOTEND = params.HOTEND|int %} ; Get nozzle temp from gcode
-    {% set CHAMBERTEMP = params.CHAMBER|default(0)|int %} ; Get chamber temp from gcode
+    {% set CHAMBERTEMP = params.CHAMBERTEMP|default(0)|int %} ; Get chamber temp from gcode
     Red
     status_heating
     HEATSOAK heatsoak_temp={BED}
@@ -212,9 +212,10 @@ gcode:
     CLEAN_NOZZLE
     G1 Z20 F3000                   ; move nozzle away from bed
     White
-    LINE_PURGE
+    #LINE_PURGE
     #VORON_PURGE
-    SFS_ENABLE
+    #SFS_ENABLE
+    SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1
     status_printing
     M117
 
