--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -47,4 +47,7 @@ gcode: HEATSOAK
 #~# status_printing_skirt = False
 #~# status_standby_skirt = False
 #~# voron_purge = False
+#~# 
+#~# [graph Voron]
+#~# extruder = False
 #~#
