--- a/filament_sensor.cfg
+++ b/filament_sensor.cfg
@@ -7,22 +7,26 @@ switch_pin: ^PG12
 pause_on_runout: False
 runout_gcode:
     PAUSE
+    SET_LED_EFFECT EFFECT=filament_runout
     M117 Filament Switch Runout
 insert_gcode:
     M117 Filament Switch Inserted
+    SET_LED_EFFECT EFFECT=filament_runout STOP=1
 
 [filament_motion_sensor encoder_sensor]
 switch_pin: ^PG13
-detection_length: 2.88
+detection_length: 10 #2.88
 extruder: extruder
 pause_on_runout: False
 event_delay: 3.0
 pause_delay: 0.5
 runout_gcode:
     PAUSE
+    SET_LED_EFFECT EFFECT=filament_runout
     M117 Filament Encoder Runout
 insert_gcode:
     M117 Filament Encoder Inserted
+    SET_LED_EFFECT EFFECT=filament_runout STOP=1
 
 [delayed_gcode DISABLEFILAMENTSENSOR]
 initial_duration: 1
