--- a/led_effects.cfg
+++ b/led_effects.cfg
@@ -2,13 +2,13 @@
 autostart:              false
 frame_rate:             24
 leds:
-    neopixel:NeoPixels
+    neopixel:CaseLights
 layers:
     breathing  10 1 top (.5,.5,1)
 
 [led_effect critical_error]
 leds:
-    neopixel:NeoPixels
+    neopixel:CaseLights
 layers:
     strobe         1  1.5   add        (1.0,  1.0, 1.0)
     breathing      2  0     difference (0.95, 0.0, 0.0)
@@ -16,3 +16,27 @@ layers:
 autostart:                             false
 frame_rate:                            24
 run_on_error:                          true
+
+[led_effect filament_runout]
+autostart: false
+leds:
+    neopixel:CaseLights
+layers:
+    breathing 3.0 0 top (0.38,0.21,0.51)
+
+[led_effect print_paused]
+autostart: false
+leds:
+    neopixel:CaseLights
+layers:
+    comet 1.00 1.00 add (0.8,0.1,0.0),(0.8,0.1,0.00)
+    comet -1.00 1.00 top (0.8,0.1,0.0),(0.8,0.1,0.00)
+
+[led_effect print_error]
+autostart: false
+leds:
+    neopixel:CaseLights
+layers:
+    strobe         1  1.5   add        (1.0,  0.0, 0.0)
+    breathing      2  0     difference (0.95, 0.0, 0.0)
+    static         1  0     top        (1.0,  0.0, 0.0)
