--- a/macros.cfg
+++ b/macros.cfg
@@ -1,7 +1,7 @@
 [delayed_gcode LightsTurnOn]
 initial_duration: 1
 gcode:
-    SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=1
+    SET_LED LED=CaseLights RED=1 GREEN=1 BLUE=1
 
 [gcode_macro CG28]
 gcode:
@@ -102,28 +102,28 @@ gcode:
 
 [gcode_macro LightsOff]
 gcode:
-    SET_LED LED=NeoPixels VALUE=0
+    SET_LED LED=CaseLights VALUE=0
 [gcode_macro LightsOn]
 gcode:
-    SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=1
+    SET_LED LED=CaseLights RED=1 GREEN=1 BLUE=1
 [gcode_macro Red]
 gcode:
-    SET_LED LED=NeoPixels RED=1 GREEN=0 BLUE=0
+    SET_LED LED=CaseLights RED=1 GREEN=0 BLUE=0
 [gcode_macro Blue]
 gcode:
-    SET_LED LED=NeoPixels RED=0 GREEN=0 BLUE=1
+    SET_LED LED=CaseLights RED=0 GREEN=0 BLUE=1
 [gcode_macro Green]
 gcode:
-    SET_LED LED=NeoPixels RED=0 GREEN=1 BLUE=0
+    SET_LED LED=CaseLights RED=0 GREEN=1 BLUE=0
 [gcode_macro Purple]
 gcode:
-    SET_LED LED=NeoPixels RED=1 GREEN=0 BLUE=1
+    SET_LED LED=CaseLights RED=1 GREEN=0 BLUE=1
 [gcode_macro Yellow]
 gcode:
-    SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=0
+    SET_LED LED=CaseLights RED=1 GREEN=1 BLUE=0
 [gcode_macro White]
 gcode:
-    SET_LED LED=NeoPixels RED=1 GREEN=1 BLUE=1
+    SET_LED LED=CaseLights RED=1 GREEN=1 BLUE=1
 
 [delayed_gcode shutdown_machine]
 gcode:
