--- a/printer.cfg
+++ b/printer.cfg
@@ -23,6 +23,8 @@ resolution: 0.1
 
 [pause_resume]
 
+[state_notify]
+
 [virtual_sdcard]
 path: /home/pi/printer_data/gcodes
 
@@ -241,6 +243,8 @@ activate_gcode:
             TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
         {% endif %}
     {% endif %}
+
+[settling_probe]
     
 #####################################################################
 #   Fan Control
