--- a/skirt_button_pcb.cfg
+++ b/skirt_button_pcb.cfg
@@ -331,6 +331,11 @@ press_gcode: _BUTTON_B6
 pin: ^!skirt: PA15
 press_gcode: _BUTTON_B7
 
+[delayed_gcode _EmergRed]
+gcode:
+  _status_button_ready BUTTON=1
+initial_duration: 5.0
+
 #####################################
 #             DISPLAY               #
 #####################################
