--- a/klipperExpander.cfg
+++ b/klipperExpander.cfg
@@ -34,7 +34,7 @@ restart_method: command
 [static_digital_output onboardLED]
 pins: !expander:PA4
 
-[neopixel NeoPixels]
+[neopixel CaseLights]
 pin: expander:PB1
 chain_count: 68
 color_order: GRB
